# Alphafold-V2-Reproduction

./: .gitignore  PRD.md  README.md  TASKS.md  pyproject.toml
artifacts/reports/: manual_run_full.md
configs/: paths.example.yaml
configs/inference/: monomer.yaml  monomer_ptm.yaml  multimer.yaml
docker/: Dockerfile  __init__.py  run_docker.py
docs/: architecture.md  data.md  outputs.md  references.md
examples/fastas/: target_example.fasta
requirements/: base.txt  dev.txt  docker.txt
scripts/: check_env.sh  download_params.sh  download_reduced_dbs.sh  inspect_outputs.py  run_monomer.sh  summarize_outputs.py
src/af2_repro/: __init__.py
src/af2_repro/cli/: predict.py
src/af2_repro/common/: confidence.py  protein.py  residue_constants.py
src/af2_repro/inference/: __init__.py  runner.py
src/af2_repro/io/: json_io.py  pdb.py  pickle_io.py
src/af2_repro/model/: config.py  embeddings.py  evoformer.py  heads.py  ipa.py  model.py  params.py  recycling.py  structure_module.py  triangle.py
src/af2_repro/relax/: amber_relaxation.py
src/af2_repro/utils/: config.py  external_tools.py  logging.py  paths.py  runtime.py
tests/integration/: test_runner_outputs.py
tests/smoke/: test_cli_smoke.py
tests/unit/: test_common_and_docker.py  test_config_and_commands.py  test_fasta_and_features.py  test_model_embeddings.py  test_parsers_and_features.py
