[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "af2-repro"
version = "0.1.0"
description = "PyTorch 版 AlphaFold 2 风格工程复现项目"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
af2-predict = "af2_repro.cli.predict:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
